--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -3,11 +3,14 @@ $text-200: #191919;
 $text-300: #303136;
 $text-400: #2c2c2c;
 $text-500: #454545;
+$text-600: #242424;
+$text-700: #2f2f2f;
 
 $bg-100: #ffffff;
 $bg-200: #f4f4f5;
 $bg-300: #e0e0e0;
 $bg-400: #9e9e9e;
+$bg-500: #f1f1f1;
 
 $primary-100: #5b42f3; //主要颜色
 $primary-200: #4f46e5;
@@ -16,8 +19,11 @@ $primary-400: #fd4a9e;
 $primary-500: #00ddeb;
 $primary-600: #94cdf8;
 $primary-700: #94cdf8;
+$primary-800: #0093e9; //立方体颜色
 
 $accent-100: #f64d28; //强调颜色
 $accent-200: #006fff;
 $accent-300: #e1ffff;
 $accent-400: #ffc700;
+$accent-500: #f89b29;
+$accent-600: #ff0f7b;
