--- a/src/components/cube-bg/index.scss
+++ b/src/components/cube-bg/index.scss
@@ -1,6 +1,7 @@
+@import '@/styles/theme';
 .cube-container {
-  width: 200px;
-  height: 200px;
+  width: 180px;
+  height: 180px;
   perspective: 800px;
   margin: 50px auto;
   .cube {
@@ -13,12 +14,12 @@
 
   .face {
     position: absolute;
-    width: 200px;
-    height: 200px;
+    width: 180px;
+    height: 180px;
     color: rgb(21, 153, 214);
     font-size: 18px;
     text-align: center;
-    line-height: 200px;
+    line-height: 180px;
     background: transparent;
     opacity: 0.9;
     border: 2px solid;
@@ -32,39 +33,39 @@
   }
 
   .front {
-    transform: translateZ(100px);
-    background-color: #0093e9;
-    background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+    transform: translateZ(90px);
+    background-color: $primary-200;
+    background-image: linear-gradient(160deg, $primary-200 0%, #80d0c7 100%);
   }
 
   .back {
-    transform: rotateY(180deg) translateZ(100px);
-    background-color: #0093e9;
-    background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+    transform: rotateY(180deg) translateZ(90px);
+    background-color: $primary-200;
+    background-image: linear-gradient(160deg, $primary-200 0%, #80d0c7 100%);
   }
 
   .right {
-    transform: rotateY(90deg) translateZ(100px);
-    background-color: #0093e9;
-    background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+    transform: rotateY(90deg) translateZ(90px);
+    background-color: $primary-200;
+    background-image: linear-gradient(160deg, $primary-200 0%, #80d0c7 100%);
   }
 
   .left {
-    transform: rotateY(-90deg) translateZ(100px);
-    background-color: #0093e9;
-    background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+    transform: rotateY(-90deg) translateZ(90px);
+    background-color: $primary-200;
+    background-image: linear-gradient(160deg, $primary-200 0%, #80d0c7 100%);
   }
 
   .top {
-    transform: rotateX(90deg) translateZ(100px);
-    background-color: #0093e9;
-    background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+    transform: rotateX(90deg) translateZ(90px);
+    background-color: $primary-200;
+    background-image: linear-gradient(160deg, $primary-200 0%, #80d0c7 100%);
   }
 
   .bottom {
-    transform: rotateX(-90deg) translateZ(100px);
-    background-color: #0093e9;
-    background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+    transform: rotateX(-90deg) translateZ(90px);
+    background-color: $primary-200;
+    background-image: linear-gradient(160deg, $primary-200 0%, #80d0c7 100%);
   }
 
   .cube-container:hover .cube {
@@ -75,7 +76,6 @@
     0% {
       transform: rotateX(0) rotateY(0) rotateZ(0);
     }
-
     100% {
       transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
     }
