--- a/src/layouts/auth/index.scss
+++ b/src/layouts/auth/index.scss
@@ -7,7 +7,8 @@
   position: relative;
   width: 100%;
   min-height: 100%;
-  overflow: auto;
+  // overflow: auto;
+  overflow: hidden;
   font-family: 'Montserrat', sans-serif;
   header {
     width: 100%;
