--- a/src/layouts/auth/FormModal/index.scss
+++ b/src/layouts/auth/FormModal/index.scss
@@ -6,14 +6,14 @@
       flex-direction: column;
       gap: 10px;
       background-color: #ffffff;
-      padding: 30px;
-      width: 450px;
+      padding: 20px;
+      // width: 450px;
       border-radius: 20px;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
         Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
-    ::placeholder {
+    &::placeholder {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
         Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
@@ -42,7 +42,7 @@
       border-radius: 10px;
       border: none;
       width: 85%;
-      height: 100%;
+      // height: 100%;
     }
 
     .input:focus {
@@ -119,5 +119,75 @@
       border: 1px solid #2d79f3;
     }
   }
+
+  // .form-login {
+  //   perspective: 1000px; //透视效果
+  //   transition: transform 0.8s;
+  //   transform-style: preserve-3d;
+  // }
+  // .form-toggle:checked {
+  //   .form-login {
+  //     transform: rotateY(180deg);
+  //   }
+  // }
+  // .form-register {
+  //   transform: rotateY(180deg);
+  // }
   // 注册
+
+  // 切换
+  .form-toggle {
+    .checkbox {
+      width: 112px;
+      height: 40px;
+      background-color: #d0d0d0;
+      border-radius: 30px;
+      position: relative;
+      color: black;
+      overflow: hidden;
+    }
+
+    #checkbox_toggle {
+      display: none;
+    }
+
+    .checkbox .toggle {
+      width: 50px;
+      height: 30px;
+      position: absolute;
+      border-radius: 30px;
+      left: 5px;
+      cursor: pointer;
+      background: linear-gradient(40deg, #ff0080, #ff8c00 70%);
+      transition: 0.4s;
+      box-shadow: 0px 0px 3px rgb(255, 255, 20), 0px 0px 5px rgb(255, 255, 20);
+    }
+
+    .checkbox .slide {
+      width: 115px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      cursor: pointer;
+    }
+
+    .checkbox .slide .text {
+      font-size: 16px;
+      font-weight: 700;
+      z-index: 100;
+      cursor: pointer;
+    }
+
+    .check:checked + .checkbox .slide .toggle {
+      transform: translateX(55px);
+      background: linear-gradient(40deg, #8983f7, #a3dafb 70%);
+      box-shadow: -0px -0px 10px #8983f7, -0px -0px 3px #8983f7;
+    }
+
+    .check:checked + .checkbox .slide {
+      background-color: #0a1929;
+      color: #fff;
+    }
+  }
 }
