--- a/src/layouts/auth/FormModal/index.scss
+++ b/src/layouts/auth/FormModal/index.scss
@@ -1,122 +1,194 @@
+@import '@/styles/theme';
 .form-container {
+  margin: 15px 0;
   // 登录
   .login-container {
-    .form {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    .form-box {
       display: flex;
       flex-direction: column;
       gap: 10px;
-      background-color: #ffffff;
-      padding: 20px;
-      // width: 450px;
+      background-color: $bg-100;
+      padding: 20px 5px;
+      padding-bottom: 0;
       border-radius: 20px;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
+      .input-title {
+        color: $text-200;
+        font-weight: 600;
+        margin-left: 3px;
+      }
+      .input-content {
+        box-sizing: border-box;
+        border: 1.5px solid $bg-600;
+        border-radius: 10px;
+        height: 45px;
+        display: flex;
+        align-items: center;
+        padding: 8px 10px;
+        transition: 0.2s ease-in-out;
+        overflow: hidden;
+        &:focus-within {
+          border: 1.5px solid $accent-700;
+        }
 
-    &::placeholder {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
+        i {
+          font-size: 22px;
+          &.icon-eyes {
+            font-size: 18px;
+            cursor: pointer;
+          }
+        }
+        .icon-eyes-box {
+          display: flex;
+          align-items: center;
 
-    .form button {
-      align-self: flex-end;
-    }
+          position: relative;
+          .icon-line {
+            position: absolute;
+            left: 0;
+            width: 24px;
+            height: 2px;
+            background-color: $text-300;
+            transform: rotate(-45deg) translateX(50px);
+            transition: 0.2s;
+          }
+          .icon-line.line-w {
+            transform: rotate(-45deg) translateX(0);
+          }
+        }
 
-    .flex-column > label {
-      color: #151717;
-      font-weight: 600;
-    }
-
-    .inputForm {
-      border: 1.5px solid #ecedec;
-      border-radius: 10px;
-      height: 50px;
-      display: flex;
-      align-items: center;
-      padding-left: 10px;
-      transition: 0.2s ease-in-out;
-    }
-
-    .input {
-      margin-left: 10px;
-      border-radius: 10px;
-      border: none;
-      width: 85%;
-      // height: 100%;
-    }
-
-    .input:focus {
-      outline: none;
-    }
-
-    .inputForm:focus-within {
-      border: 1.5px solid #2d79f3;
-    }
-
-    .flex-row {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      gap: 10px;
-      justify-content: space-between;
-    }
-
-    .flex-row > div > label {
-      font-size: 14px;
-      color: black;
-      font-weight: 400;
-    }
-
-    .span {
-      font-size: 14px;
-      margin-left: 5px;
-      color: #2d79f3;
-      font-weight: 500;
-      cursor: pointer;
-    }
-
-    .button-submit {
-      margin: 20px 0 10px 0;
-      background-color: #151717;
-      border: none;
-      color: white;
-      font-size: 15px;
-      font-weight: 500;
-      border-radius: 10px;
-      height: 50px;
-      width: 100%;
-      cursor: pointer;
-    }
-
-    .button-submit:hover {
-      background-color: #252727;
-    }
-
-    .p {
-      text-align: center;
-      color: black;
-      font-size: 14px;
-      margin: 5px 0;
-    }
-
-    .btn {
-      margin-top: 10px;
-      width: 100%;
-      height: 50px;
-      border-radius: 10px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-weight: 500;
-      gap: 10px;
-      border: 1px solid #ededef;
-      background-color: white;
-      cursor: pointer;
-      transition: 0.2s ease-in-out;
-    }
-
-    .btn:hover {
-      border: 1px solid #2d79f3;
+        .input-text {
+          box-sizing: border-box;
+          border-radius: 5px;
+          border: none;
+          width: 100%;
+          margin: 0 2px;
+          height: 100%;
+          padding: 0 8px;
+          &:focus {
+            outline: none;
+          }
+        }
+      }
+      .form-other {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
+        justify-content: space-between;
+        > :first-child {
+          display: flex;
+        }
+        label {
+          font-size: 14px;
+          color: $text-200;
+          font-weight: 400;
+          margin-left: 2px;
+        }
+      }
+      .link {
+        font-size: 14px;
+        margin-left: 5px;
+        color: $accent-700;
+        font-weight: 500;
+        cursor: pointer;
+      }
+      button {
+        align-self: flex-end;
+      }
+      .button-submit {
+        margin: 20px 0 10px 0;
+        background-color: $text-800;
+        border: none;
+        color: $bg-100;
+        font-size: 15px;
+        font-weight: 500;
+        border-radius: 10px;
+        height: 45px;
+        width: 100%;
+        cursor: pointer;
+        transition: 0.2s;
+        &:hover {
+          background-color: $text-600;
+        }
+        &:active {
+          transform: translateY(2px);
+        }
+      }
+      .form-login-or {
+        font-size: 16px;
+        font-weight: 600;
+        letter-spacing: -2px;
+        text-align: center;
+        opacity: 0.4;
+        position: relative;
+        &::before {
+          content: '';
+          width: 45%;
+          height: 1px;
+          background-color: $text-200;
+          opacity: 0.4;
+          position: absolute;
+          left: 0;
+          top: calc(50% - 1px);
+        }
+        &::after {
+          content: '';
+          width: 45%;
+          height: 1px;
+          background-color: $text-200;
+          opacity: 0.4;
+          position: absolute;
+          right: 0;
+          top: calc(50% - 1px);
+        }
+      }
+      .register {
+        text-align: center;
+        color: $text-100;
+        font-size: 14px;
+        margin: 5px 0;
+      }
+      .fast-box {
+        display: flex;
+        flex-direction: column;
+        .fast-btn {
+          margin-top: 10px;
+          width: 100%;
+          height: 45px;
+          border-radius: 10px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-weight: 500;
+          gap: 10px;
+          border: 1px solid #ededef;
+          background-color: white;
+          cursor: pointer;
+          transition: 0.2s ease-in-out;
+          outline: 2px solid transparent;
+          &:first-child {
+            margin-top: 5px;
+          }
+          &:active {
+            width: 90%;
+            opacity: 0;
+          }
+          img {
+            height: 30px;
+          }
+        }
+        .github:hover {
+          outline: 2px solid $text-300;
+        }
+        .gitee:hover {
+          outline: 2px solid #c71d23;
+        }
+        .google:hover {
+          outline: 2px solid $accent-700;
+        }
+      }
     }
   }
 
