--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -5,12 +5,14 @@ $text-400: #2c2c2c;
 $text-500: #454545;
 $text-600: #242424;
 $text-700: #2f2f2f;
+$text-800: #151717;
 
 $bg-100: #ffffff;
 $bg-200: #f4f4f5;
 $bg-300: #e0e0e0;
 $bg-400: #9e9e9e;
 $bg-500: #f1f1f1;
+$bg-600: #ecedec;
 
 $primary-100: #5b42f3; //主要颜色
 $primary-200: #4f46e5;
@@ -27,3 +29,4 @@ $accent-300: #e1ffff;
 $accent-400: #ffc700;
 $accent-500: #f89b29;
 $accent-600: #ff0f7b;
+$accent-700: #2d79f3;
