--- a/src/components/mr-card/index.scss
+++ b/src/components/mr-card/index.scss
@@ -13,6 +13,13 @@
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03),
     0 1px 6px -1px rgba(0, 0, 0, 0.02), 0 2px 4px 0 rgba(0, 0, 0, 0.02);
   border-bottom: 1px solid rgba(5, 5, 5, 0.06);
+  transform: translateZ(0); //触发 GPU 硬件加速
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  backface-visibility: hidden; //解决ios上内容闪动的问题
+  -webkit-backdrop-filter: saturate(50%) blur(6px); //兼容设备
   backdrop-filter: saturate(50%) blur(6px);
   .card-bc {
     width: 100%;
