--- a/src/layouts/admin/index.scss
+++ b/src/layouts/admin/index.scss
@@ -8,6 +8,13 @@
     height: 60px;
     width: 100%;
     background: transparent;
+    transform: translateZ(0); //触发 GPU 硬件加速
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    backface-visibility: hidden; //解决ios上内容闪动的问题
+    -webkit-backdrop-filter: saturate(50%) blur(6px);
     backdrop-filter: saturate(50%) blur(6px);
     // cursor: url('../../assets/icons/cursor-1.png'), auto;
     transition: all 1s ease-out;
