--- a/src/page/users/index.scss
+++ b/src/page/users/index.scss
@@ -13,6 +13,13 @@
     background: center center / cover rgba(244, 247, 254, 0.2);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03),
       0 1px 6px -1px rgba(0, 0, 0, 0.02), 0 2px 4px 0 rgba(0, 0, 0, 0.02);
+    transform: translateZ(0); //触发 GPU 硬件加速
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    backface-visibility: hidden; //解决ios上内容闪动的问题
+    -webkit-backdrop-filter: blur(20px);
     backdrop-filter: blur(20px);
   }
   .container {
