--- a/src/page/manage/index.scss
+++ b/src/page/manage/index.scss
@@ -1,6 +1,6 @@
-.home-container {
-  width: 100%;
-  height: 100%;
+.manage-container {
+  // width: 100%;
+  // height: 100%;
   padding: 15px 25px;
   font-size: 16px;
   main {
@@ -9,7 +9,7 @@
     > div {
       // height: 400px;
       // width: 49%;
-      width: 100%;
+      // width: 100%;
       padding: 30px;
       border-radius: 30px;
       background: #ffffff;
