--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -13,6 +13,7 @@ $bg-300: #e0e0e0;
 $bg-400: #9e9e9e;
 $bg-500: #f1f1f1;
 $bg-600: #ecedec;
+$bg-700: #212121;
 
 $primary-100: #5b42f3; //主要颜色
 $primary-200: #4f46e5;
