--- a/src/layouts/admin/index.scss
+++ b/src/layouts/admin/index.scss
@@ -45,11 +45,15 @@
       }
       .mrk-select-app {
         border-radius: 8px;
-        background-color: $bg-200;
-        padding: 8px 20px;
+        // background-color: $bg-200;
+        // padding: 8px 20px;
         > i {
-          margin-left: 10px;
+          margin: 5px;
           font-size: 12px;
+          &:first-child {
+            margin: 3px;
+            font-size: 16px;
+          }
         }
       }
 
@@ -96,14 +100,8 @@
         }
       }
       .mrk-select-app {
-        background-color: $text-300;
+        // background-color: $text-300;
       }
     }
   }
-}
-
-// 自定义下拉
-.custom-dropdown-app {
-  color: $text-200;
-  background-color: $bg-100;
 }
