--- a/src/layouts/admin/components/dropdown-user/index.scss
+++ b/src/layouts/admin/components/dropdown-user/index.scss
@@ -24,11 +24,92 @@
   > main {
     width: 100%;
     flex: 1;
+    .dropdown-main-top {
+      margin-bottom: 15px;
+      background-color: $accent-200;
+      color: $bg-100;
+      height: 200px;
+      border-radius: 20px;
+      padding: 18px;
+      width: 100%;
+      box-sizing: border-box;
+      display: flex;
+      justify-content: space-between;
+      .dropdown-main-top-left {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        > :first-child {
+          font-size: 20px;
+          margin-bottom: 5px;
+        }
+        .dropdown-main-introduce {
+          padding-top: 5px;
+          > :first-child {
+            font-size: 25px;
+            margin-bottom: 5px;
+          }
+        }
+        .dropdown-main-timer {
+          margin-bottom: 5px;
+          font-size: 14px;
+        }
+      }
+
+      .dropdown-main-head {
+        width: 90px;
+        height: 90px;
+        border-radius: 50%;
+        margin-right: 3px;
+        border: 3px solid $bg-500;
+        > img {
+          width: 100%;
+          height: 100%;
+          border-radius: 50%;
+        }
+      }
+    }
   }
   > footer {
     width: 100%;
-    height: 50px;
-    line-height: 50px;
+    .space-line {
+      width: 100%;
+      height: 1px;
+      background-color: $bg-300;
+    }
+    .login-out-box {
+      box-sizing: border-box;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 6px;
+      height: 40px;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: $bg-200;
+      position: relative;
+      transition: all 0.3s;
+      &:hover {
+        background-color: $accent-100;
+        color: $bg-100;
+        .login-text {
+          letter-spacing: 2px;
+        }
+      }
+      &:active {
+        transform: translateY(2px);
+        transition: 100ms;
+      }
+      .login-out {
+        margin-top: 2px;
+        margin-right: 8px;
+      }
+      .login-text {
+        letter-spacing: 1px;
+        transition: letter-spacing 0.2s;
+      }
+    }
   }
 }
 // 自定义下拉 - 黑暗模式
@@ -36,4 +117,19 @@
   color: $bg-100;
   background-color: $text-200;
   box-shadow: none;
+  > footer {
+    .space-line {
+      background-color: $text-300;
+    }
+    .login-out-box {
+      background-color: $bg-700;
+      &:hover {
+        background-color: $accent-100;
+        color: $bg-100;
+        .login-text {
+          letter-spacing: 2px;
+        }
+      }
+    }
+  }
 }
